; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/session/extr_changesetfuzz.c_fuzzParseChanges.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/session/extr_changesetfuzz.c_fuzzParseChanges.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, i32, i32, i32, %struct.TYPE_5__** }
%struct.TYPE_5__ = type { i64*, i32, i32 }

@SQLITE_OK = common dso_local global i32 0, align 4
@SQLITE_UPDATE = common dso_local global i64 0, align 8
@SQLITE_INSERT = common dso_local global i64 0, align 8
@SQLITE_DELETE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64**, i64*, %struct.TYPE_6__*)* @fuzzParseChanges to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fuzzParseChanges(i64** %0, i64* %1, %struct.TYPE_6__* %2) #0 {
  %4 = alloca i64**, align 8
  %5 = alloca i64*, align 8
  %6 = alloca %struct.TYPE_6__*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.TYPE_5__*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  store i64** %0, i64*** %4, align 8
  store i64* %1, i64** %5, align 8
  store %struct.TYPE_6__* %2, %struct.TYPE_6__** %6, align 8
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  %18 = zext i1 %17 to i64
  %19 = select i1 %17, i32 80, i32 84
  %20 = sext i32 %19 to i64
  store i64 %20, i64* %7, align 8
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 4
  %23 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %22, align 8
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 8
  %27 = sub nsw i32 %26, 1
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds %struct.TYPE_5__*, %struct.TYPE_5__** %23, i64 %28
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %29, align 8
  store %struct.TYPE_5__* %30, %struct.TYPE_5__** %8, align 8
  %31 = load i32, i32* @SQLITE_OK, align 4
  store i32 %31, i32* %9, align 4
  %32 = load i64**, i64*** %4, align 8
  %33 = load i64*, i64** %32, align 8
  store i64* %33, i64** %10, align 8
  %34 = load i64*, i64** %10, align 8
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %36 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %35, i32 0, i32 0
  store i64* %34, i64** %36, align 8
  br label %37

37:                                               ; preds = %110, %3
  %38 = load i32, i32* %9, align 4
  %39 = load i32, i32* @SQLITE_OK, align 4
  %40 = icmp eq i32 %38, %39
  br i1 %40, label %41, label %51

41:                                               ; preds = %37
  %42 = load i64*, i64** %10, align 8
  %43 = load i64*, i64** %5, align 8
  %44 = icmp ult i64* %42, %43
  br i1 %44, label %45, label %51

45:                                               ; preds = %41
  %46 = load i64*, i64** %10, align 8
  %47 = getelementptr inbounds i64, i64* %46, i64 0
  %48 = load i64, i64* %47, align 8
  %49 = load i64, i64* %7, align 8
  %50 = icmp ne i64 %48, %49
  br label %51

51:                                               ; preds = %45, %41, %37
  %52 = phi i1 [ false, %41 ], [ false, %37 ], [ %50, %45 ]
  br i1 %52, label %53, label %119

53:                                               ; preds = %51
  %54 = load i64*, i64** %10, align 8
  %55 = getelementptr inbounds i64, i64* %54, i64 0
  %56 = load i64, i64* %55, align 8
  store i64 %56, i64* %11, align 8
  %57 = load i64*, i64** %10, align 8
  %58 = getelementptr inbounds i64, i64* %57, i64 1
  %59 = load i64, i64* %58, align 8
  store i64 %59, i64* %12, align 8
  %60 = load i64*, i64** %10, align 8
  %61 = getelementptr inbounds i64, i64* %60, i64 2
  store i64* %61, i64** %10, align 8
  %62 = load i64, i64* %11, align 8
  %63 = load i64, i64* @SQLITE_UPDATE, align 8
  %64 = icmp eq i64 %62, %63
  br i1 %64, label %65, label %79

65:                                               ; preds = %53
  %66 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %67 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %66, i32 0, i32 3
  %68 = load i32, i32* %67, align 8
  %69 = add nsw i32 %68, 1
  store i32 %69, i32* %67, align 8
  %70 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %71 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %70, i32 0, i32 0
  %72 = load i64, i64* %71, align 8
  %73 = icmp eq i64 %72, 0
  br i1 %73, label %74, label %78

74:                                               ; preds = %65
  %75 = load i64*, i64** %5, align 8
  %76 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %77 = call i32 @fuzzParseRecord(i64** %10, i64* %75, %struct.TYPE_6__* %76, i32 0)
  store i32 %77, i32* %9, align 4
  br label %78

78:                                               ; preds = %74, %65
  br label %90

79:                                               ; preds = %53
  %80 = load i64, i64* %11, align 8
  %81 = load i64, i64* @SQLITE_INSERT, align 8
  %82 = icmp ne i64 %80, %81
  br i1 %82, label %83, label %89

83:                                               ; preds = %79
  %84 = load i64, i64* %11, align 8
  %85 = load i64, i64* @SQLITE_DELETE, align 8
  %86 = icmp ne i64 %84, %85
  br i1 %86, label %87, label %89

87:                                               ; preds = %83
  %88 = call i32 (...) @fuzzCorrupt()
  store i32 %88, i32* %9, align 4
  br label %89

89:                                               ; preds = %87, %83, %79
  br label %90

90:                                               ; preds = %89, %78
  %91 = load i32, i32* %9, align 4
  %92 = load i32, i32* @SQLITE_OK, align 4
  %93 = icmp eq i32 %91, %92
  br i1 %93, label %94, label %110

94:                                               ; preds = %90
  %95 = load i64, i64* %11, align 8
  %96 = load i64, i64* @SQLITE_DELETE, align 8
  %97 = icmp eq i64 %95, %96
  br i1 %97, label %98, label %103

98:                                               ; preds = %94
  %99 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %100 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %99, i32 0, i32 0
  %101 = load i64, i64* %100, align 8
  %102 = icmp ne i64 %101, 0
  br label %103

103:                                              ; preds = %98, %94
  %104 = phi i1 [ false, %94 ], [ %102, %98 ]
  %105 = zext i1 %104 to i32
  store i32 %105, i32* %13, align 4
  %106 = load i64*, i64** %5, align 8
  %107 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %108 = load i32, i32* %13, align 4
  %109 = call i32 @fuzzParseRecord(i64** %10, i64* %106, %struct.TYPE_6__* %107, i32 %108)
  store i32 %109, i32* %9, align 4
  br label %110

110:                                              ; preds = %103, %90
  %111 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %112 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %111, i32 0, i32 2
  %113 = load i32, i32* %112, align 4
  %114 = add nsw i32 %113, 1
  store i32 %114, i32* %112, align 4
  %115 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %116 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %115, i32 0, i32 2
  %117 = load i32, i32* %116, align 4
  %118 = add nsw i32 %117, 1
  store i32 %118, i32* %116, align 4
  br label %37

119:                                              ; preds = %51
  %120 = load i64*, i64** %10, align 8
  %121 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %122 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %121, i32 0, i32 0
  %123 = load i64*, i64** %122, align 8
  %124 = ptrtoint i64* %120 to i64
  %125 = ptrtoint i64* %123 to i64
  %126 = sub i64 %124, %125
  %127 = sdiv exact i64 %126, 8
  %128 = trunc i64 %127 to i32
  %129 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %130 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %129, i32 0, i32 1
  store i32 %128, i32* %130, align 8
  %131 = load i64*, i64** %10, align 8
  %132 = load i64**, i64*** %4, align 8
  store i64* %131, i64** %132, align 8
  %133 = load i32, i32* %9, align 4
  ret i32 %133
}

declare dso_local i32 @fuzzParseRecord(i64**, i64*, %struct.TYPE_6__*, i32) #1

declare dso_local i32 @fuzzCorrupt(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
